crates/bitwarden-logging/tests/compilation_tests/skip_all_forbidden.rs
#[bitwarden_logging::instrument(skip_all)]
fn explicit_skip_all_should_fail(password: &str) {
    let _ = password;
}

fn main() {}
